--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "inline"
     ],
     "website": "https://github.com/Aadhi000/Red-Fox",
-    "repository": "https://github.com/Aadhi000/Red-Fox",
+    "repository": "https://github.com/sherlocksha1/bot",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
